--- a/.releaserc
+++ b/.releaserc
@@ -9,6 +9,7 @@
           { "type": "feat", "release": "minor" },
           { "type": "fix", "release": "patch" },
           { "type": "chore", "release": "patch" },
+          { "type": "docs", "release": "patch" },
           { "type": "style", "release": "patch" },
           { "type": "refactor", "release": "patch" },
           { "type": "perf", "release": "patch" },
